--- a/templates/template/base.html.twig
+++ b/templates/template/base.html.twig
@@ -1,5 +1,6 @@
+<!DOCTYPE html>
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Lapi's Bet !{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="/css/custom.css">
@@ -17,31 +18,48 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Lapi Pari</a>
+            <a class="navbar-brand" href="{{ path_for('Home') }}">Lapi Pari</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li {# if app.request.get('_route') == 'homepage' #} class="active" {# endif #}>
-                    <a href="">Ajouter un pari</a>
+                <li {% if currentUrl == path_for('Home') %} class="active"{% endif %}>
+                    <a href="{{ path_for('Home') }}">Pari</a>
                 </li>
+                {% if session.user %}
+                    <li {% if currentUrl == path_for('Create_Bet') %} class="active"{% endif %}>
+                        <a href="{{ path_for('Create_Bet') }}">Ajouter un pari</a>
+                    </li>
+                    <li {% if currentUrl == path_for('Logout') %} class="active"{% endif %}>
+                        <a href="{{ path_for('Logout') }}">Logout</a>
+                    </li>
+                {% else %}
+                    <li {% if currentUrl == path_for('Login') %} class="active"{% endif %}>
+                        <a href="{{ path_for('Login') }}">Login (Admin)</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
+    </div>
 </nav>
 {% block content %}{% endblock %}
 <footer class="footer">
-    <i class="fa fa-lg fa-github"></i> <a href="https://github.com/WFrancois/lapi_bet">GitHub</a><br />
+    <i class="fa fa-lg fa-github"></i> <a href="https://github.com/WFrancois/lapi_bet">GitHub</a><br/>
     Created By Wisak
 </footer>
 <script
         src="/js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/moment.js"></script>
+<script src="/js/moment-timezone.js"></script>
+<script src="/js/moment-timezone-with-data-2012-2022.js"></script>
 {% block javascripts %}{% endblock %}
 </body>
 </html>
