--- a/templates/listBet.html.twig
+++ b/templates/listBet.html.twig
@@ -15,7 +15,7 @@
             <tbody>
             {% for bet in bets %}
                 <tr>
-                    <td>{{ bet.name }} {% if bet.inProgress %}<span class="label label-success">In progress</span>{% endif %}</td>
+                    <td><a href="{{ path_for('Display_Bet', {betId: bet.id}) }}">{{ bet.name }}</a> {% if bet.inProgress %}<span class="label label-success">In progress</span>{% endif %}</td>
                     <td>{{ bet.answerType }}</td>
                     <td>{{ bet.pariDurationMinute }}</td>
                     <td>{{ bet.dateCreated }}</td>
