--- a/templates/displayBet.html.twig
+++ b/templates/displayBet.html.twig
@@ -12,7 +12,7 @@
 
 {% block content %}
     <div class="container">
-        <div class="js--graph-live" id="graphHighchart" data-bet-id="{{ bet.id }}" data-bet-title="{{ bet.description }}">
+        <div class="js--graph-live" id="graphHighchart" data-live-update="{{ inProgress }}" data-bet-id="{{ bet.id }}" data-bet-title="{{ bet.description }}">
         </div>
     </div>
 {% endblock %}
