--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -17,7 +17,7 @@
         {% endif %}
     </div>
     {% if bet %}
-        <div id="graphHighchart" data-bet-id="{{ bet.id }}" data-bet-title="{{ bet.description }}" {% if time %}data-live-update="true"{% endif %}>
+        <div id="graphHighchart" data-bet-id="{{ bet.id }}" data-bet-title="{{ bet.name }}" {% if time %}data-live-update="true"{% endif %}>
 
         </div>
     {% endif %}
