Add title in create bet, set threshold to 5

--- a/templates/createBet.html.twig
+++ b/templates/createBet.html.twig
@@ -2,6 +2,7 @@
 
 {% block content %}
     <div class="container">
+        <h2>Créer un pari</h2>
         <form method="post" id="formCreateBet">
             {% if error %}
                 <div class="alert alert-danger" role="alert">{{ error }}</div>
