--- a/templates/displayBet.html.twig
+++ b/templates/displayBet.html.twig
@@ -32,7 +32,7 @@
         <p>
             <b>Nom</b> : {{ bet.name }}<br/>
             <b>Type</b> : {{ bet.answerType.name }}<br/>
-            <b>Début</b> : {{ bet.dateCreated }}<br/>
+            <b>Début</b> : {{ bet.dateCreated|date('d/m/Y H:i:s') }}<br/>
             <b>Durée</b> : {{ bet.pariDurationMinute }} minutes
         </p>
         <h2>Réponses</h2>
