--- a/templates/displayBet.html.twig
+++ b/templates/displayBet.html.twig
@@ -57,17 +57,32 @@
             </div>
         </div>
         <form class="form-inline js--get-winner">
-            <div class="form-group">
-                <label for="answer">Réponse</label>
-                <input type="text" class="form-control" id="answer" data-answer-type="{{ bet.answerType.type }}"
-                       placeholder="{{ bet.answerType.placeholder }}">
-            </div>
-            <button type="submit" class="btn btn-default">Envoyer</button>
+            <table class="">
+                <tr>
+                    <td>
+                        <div class="form-group">
+                            <label for="answer">Réponse</label>
+                            <input type="text" class="form-control" id="answer" data-answer-type="{{ bet.answerType.type }}"
+                                   placeholder="{{ bet.answerType.placeholder }}">
+                        </div>
+                    </td>
+                    <td rowspan="2"><button type="submit" class="btn btn-default">Envoyer</button></td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="requiredLogged"> Connecté ?
+                            </label>
+                        </div>
+                    </td>
+                </tr>
+            </table>
         </form>
         <div class="row js--one-winner" style="margin-bottom: 10px; height:400px; width:100%;">
             <div class="js--display-dice" style="display:none; padding-top:20px;height:380px;width:100%;">
             </div>
-            <div class="js--display-winner col-sm-12" style="display:none;text-align:center;line-height:400px;width:100%;height:400px;font-size:30px;">Bravo <strong>isak59</strong> !</div>
+            <div class="js--display-winner col-sm-12" style="display:none;text-align:center;line-height:400px;width:100%;height:400px;font-size:30px;"></div>
         </div>
         <div class="row js--all-winners" style="display:none;">
             <table class="table table-hovered table-striped js--table-answer">
@@ -116,7 +131,7 @@
                 displayDice.hide();
                 displayWinner.hide();
 
-                $.post('/ajax/bet/' + {{ bet.id }} +'/winner', {answer: form.find('#answer').val()}, function (data) {
+                $.post('/ajax/bet/' + {{ bet.id }} +'/winner', {answer: form.find('#answer').val(), login: form.find('#requiredLogged').is(':checked')}, function (data) {
                     if (oneWinner) {
                         displayDice.show();
                         displayDice.html('<div style="margin-left:auto;margin-right:auto;width:480px;height:360px;"><img src="https://media.giphy.com/media/6wRAJMOXqSGCk/giphy.gif"></div>');
@@ -124,14 +139,18 @@
                             displayDice.html('');
                             displayDice.hide();
                             displayWinner.show();
-                            var winner = data.table[0];
-                            displayWinner.html('Bravo <strong>' + winner.username + '</strong> !');
+
+                            displayWinner.html('Bravo <strong>' + data.winner + '</strong> !');
                         }, 9 * 1000);
                     } else {
                         tableBody.html('');
                         if (data.table) {
                             data.table.map(function (e) {
-                                tableBody.append('<tr style="background-color: #' + gradient(e.distance, data.minDistance) + ';"><td>' + e.username + '</td><td>' + e.answer + '</td><td>' + e.distance + '</td><td>' + e.date + '</td></tr>');
+                                var online = '';
+                                if(e.online) {
+                                    online = '<span class="label label-success">Online</span>';
+                                }
+                                tableBody.append('<tr style="background-color: #' + gradient(e.distance, data.minDistance) + ';"><td>' + e.username + ' ' + online + '</td><td>' + e.answer + '</td><td>' + e.distance + '</td><td>' + e.date + '</td></tr>');
                             });
                         }
                     }
