--- a/templates/createBet.html.twig
+++ b/templates/createBet.html.twig
@@ -19,6 +19,11 @@
                     {% endfor %}
                 </select>
             </div>
+            <div class="form-group js--roundTo">
+                <label for="roundTo">Arrondir à l'affichage</label>
+                <input type="number" class="form-control" name="roundTo" id="roundTo" placeholder="10" value="{{ data.name }}">
+                <span id="helpBlock" class="help-block">Pour arrondir à la dizaine, mettre "10". Cela n'affectera pas les gagnants, juste l'affichage graphique.</span>
+            </div>
             <div class="form-group">
                 <label for="durationMinute">Durée du pari</label>
                 <div class="input-group">
@@ -40,6 +45,14 @@
             var duration = form.find('.js--duration').val();
             if(duration > 10) {
                 return confirm('Es-tu sûr de mettre un vote à ' + duration + ' minutes ? Il n\'est possible d\'avoir qu\'un seul vote en même temps');
+            }
+        });
+
+        form.find('#answerType').on('change', function(e) {
+            if($(this).val() === '1') {
+                $('.js--roundTo').show();
+            } else {
+                $('.js--roundTo').hide();
             }
         });
     </script>
