--- a/templates/displayBet.html.twig
+++ b/templates/displayBet.html.twig
@@ -71,15 +71,15 @@
                         <button type="submit" class="btn btn-default">Envoyer</button>
                     </td>
                 </tr>
-                <tr class="js--require-login">
-                    <td>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" id="requiredLogged"> Connecté ?
-                            </label>
-                        </div>
-                    </td>
-                </tr>
+                {#<tr class="js--require-login">#}
+                    {#<td>#}
+                        {#<div class="checkbox">#}
+                            {#<label>#}
+                                {#<input type="checkbox" id="requiredLogged"> Connecté ?#}
+                            {#</label>#}
+                        {#</div>#}
+                    {#</td>#}
+                {#</tr>#}
             </table>
         </form>
         <div class="row js--one-winner" style="margin-bottom: 10px; height:400px; width:100%;">
