Use date of DB instead of relying on local

--- a/templates/displayBet.html.twig
+++ b/templates/displayBet.html.twig
@@ -26,7 +26,7 @@
 {% block content %}
     <div class="container">
         <div id="message" class="duration_left js--live-message label label-info" data-type="clock"
-             data-time="{{ time }}">00:00:00
+             data-time="{{ time }}" data-now="{{ dateNow }}">00:00:00
         </div>
         <h2>Info</h2>
         <p>
