--- a/templates/displayBet.html.twig
+++ b/templates/displayBet.html.twig
@@ -114,17 +114,10 @@
     <script src="/js/liveTime.js"></script>
     <script src="/js/liveCharts.js"></script>
     <script src="/js/pikaday.js"></script>
+    <script src="/js/drawWinner.js"></script>
     <script type="application/javascript">
         $(function () {
             var form = $('.js--get-winner');
-            var tableAnswer = $('.js--table-answer');
-            var displayWinner = $('.js--display-winner');
-            var nameWinner = $('.js--name-winner');
-            var displayDice = $('.js--display-dice');
-            var messageOfWinner = $('.js--message-of-winner');
-            var tableBody = tableAnswer.find('tbody');
-            var oneWinner = true;
-            var alreadySearched = false;
 
             var type = form.find('#answer').data('answerType');
             if (type === 'date') {
@@ -134,172 +127,7 @@
                 });
             }
 
-            form.on('submit', function (e) {
-                e.preventDefault();
-                displayDice.hide();
-                displayWinner.hide();
-                messageOfWinner.html('');
-                clearTimeout(timeoutMessage);
-                clearInterval(intervalTimeWinner);
-                winner = null;
-
-                var callback = function (data) {
-                };
-
-                var displayTable = function (data) {
-                    tableBody.html('');
-                    if (data.table) {
-                        data.table.map(function (e) {
-                            var online = '';
-                            if (e.online) {
-                                online = '<span class="label label-success">Online</span>';
-                            }
-                            tableBody.append('<tr style="background-color: #' + gradient(e.distance, data.minDistance) + ';"><td>' + e.username + ' ' + online + '</td><td>' + e.answer + '</td><td>' + e.distance + '</td><td>' + e.date + '</td></tr>');
-                        });
-                    }
-                };
-
-                var timeRemaining = new Date().getTime();
-                if (oneWinner) {
-                    displayDice.show();
-                    displayDice.html('<div style="margin-left:auto;margin-right:auto;width:480px;height:360px;"><img src="https://media.giphy.com/media/6wRAJMOXqSGCk/giphy.gif"></div>');
-                    callback = function (data) {
-                        var timeoutDisplay = 1000;
-                        if (!alreadySearched) {
-                            alreadySearched = true;
-                            timeoutDisplay = 10 * 1000;
-                        }
-                        allWinners = data.table;
-                        winnerNumber = 0;
-                        displayTable(data);
-                        setTimeout(function () {
-                            displayDice.html('');
-                            displayDice.hide();
-                            displayWinner.show();
-
-                            winner = data.winner;
-                            dateWinner = new Date(data.now);
-                            nameWinner.html('Bravo <strong>' + data.winner + '</strong> !');
-                            timeWinnerDraw = parseInt((new Date()).getTime() / 1000);
-                            intervalTimeWinner = setInterval(function () {
-                                var currentTime = parseInt((new Date()).getTime() / 1000);
-                                timeWinnerDrawDiv.text(currentTime - timeWinnerDraw + ' s');
-                            }, 1000);
-                            getMessageOfWinner(winner);
-                        }, (timeoutDisplay) - (new Date().getTime() - timeRemaining));
-                    };
-                } else {
-                    tableBody.html('<tr><td colspan="4"><div style="display:flex;justify-content:center;align-items:center;font-size: 30px;margin: 25px;width:100%;"><i class="fa fa-lg fa-spinner fa-spin"></i></div></td></tr>');
-                    callback = displayTable;
-                }
-
-                $.post('/ajax/bet/' + {{ bet.id }} +'/winner', {
-                    answer: form.find('#answer').val(),
-                    login: form.find('#requiredLogged').is(':checked')
-                }, callback);
-            });
-
-            $('#oneWinner').on('change', function () {
-                if ($(this).is(':checked')) {
-                    oneWinner = true;
-                    $('.js--one-winner').show();
-                    $('.js--require-login').show();
-                    $('.js--all-winners').hide();
-                } else {
-                    oneWinner = false;
-                    $('.js--one-winner').hide();
-                    $('.js--require-login').hide();
-                    $('.js--all-winners').show();
-                }
-            });
-
-
-            var dateWinner = new Date();
-            var winner;
-            var idDisplay = [];
-            var lockLoadMessage = false;
-            var refreshMessage = $('.js--refresh-message');
-            var timeWinnerDrawDiv = $('.js--time-winner-draw');
-            var timeWinnerDraw;
-            var timeoutMessage;
-            var intervalTimeWinner;
-
-            refreshMessage.on('click', function () {
-                getMessageOfWinner('isak59');
-            });
-
-            function getMessageOfWinner(winner) {
-                if (lockLoadMessage) {
-                    return;
-                }
-                lockLoadMessage = true;
-                refreshMessage.removeClass('refresh_me');
-
-                $.post('/ajax/message', {winner: winner, date: dateWinner}, function (data) {
-                    var messages = data.messages;
-                    var length = messages.length;
-
-                    for (var i = 0; i < length; i++) {
-                        if (idDisplay.indexOf(messages[i].id) === -1) {
-                            var date = new Date(messages[i].sent);
-                            idDisplay.push(messages[i].id);
-                            messageOfWinner.prepend('<i>' + date.getHours() + ':' + date.getMinutes() + '</i> - ' + messages[i].message + '<br />');
-                        }
-                    }
-                }).always(function () {
-                    refreshMessage.addClass('refresh_me');
-                    lockLoadMessage = false;
-                    timeoutMessage = setTimeout(function () {
-                        getMessageOfWinner(winner);
-                    }, 2000);
-                });
-            }
-
-            var winnerNumber = 0;
-            var allWinners;
-            $('.js--next-winner').on('click', function (e) {
-                e.preventDefault();
-                winnerNumber += 1;
-
-                if (!allWinners[winnerNumber]) {
-                    nameWinner.html('Il n\'y a plus de gagnant :O');
-                    return;
-                }
-
-                messageOfWinner.html('');
-                winner = allWinners[winnerNumber].username;
-                timeWinnerDraw = parseInt((new Date()).getTime() / 1000);
-
-                clearInterval(intervalTimeWinner);
-                intervalTimeWinner = setInterval(function () {
-                    var currentTime = parseInt((new Date()).getTime() / 1000);
-                    timeWinnerDrawDiv.text(currentTime - timeWinnerDraw + ' s');
-                }, 1000);
-
-                nameWinner.html('Bravo <strong>' + winner + '</strong> avec ' + allWinners[winnerNumber].answer + ' !');
-            });
+            new DrawWinner({{ bet.id }});
         });
-
-        function gradient(ratio, minDistance) {
-            ratio -= minDistance;
-            ratio /= 15;
-            if (ratio > 1) {
-                ratio = 1;
-            }
-
-            var color1 = 'd9534f';
-            var color2 = '4cae4c';
-
-            var r = Math.ceil(parseInt(color1.substring(0, 2), 16) * ratio + parseInt(color2.substring(0, 2), 16) * (1 - ratio));
-            var g = Math.ceil(parseInt(color1.substring(2, 4), 16) * ratio + parseInt(color2.substring(2, 4), 16) * (1 - ratio));
-            var b = Math.ceil(parseInt(color1.substring(4, 6), 16) * ratio + parseInt(color2.substring(4, 6), 16) * (1 - ratio));
-
-            return hex(r) + hex(g) + hex(b);
-        }
-
-        function hex(x) {
-            x = x.toString(16);
-            return (x.length == 1) ? '0' + x : x;
-        }
     </script>
 {% endblock %}
